Fix neutral color contrast accessibility

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -3,7 +3,7 @@
     --brand: #ff6671;
     --accent: #78c2ad;
     --pink: #ffe6e7;
-    --neutral: #987a76;
+    --neutral: #755f5c;
     --header: 'Play', sans-serif;
     --body: 'Josefin Sans', sans-serif;
 }
